# bbrr-companion

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
src/: App.css  App.tsx  MatchPicker.tsx  SignedIn.tsx  autoUpload.test.ts  autoUpload.ts  format.ts  ipc.ts  types.ts  useActivityLog.ts  useVideoPipeline.ts
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  applog.rs  auth.rs  combatlog.rs  detect.rs  keychain.rs  lib.rs  main.rs  metadata.rs  scan.rs  settings.rs  upload.rs  util.rs  watcher.rs
